--- a/src/main/webapp/app/entities/sector/list/sector.component.html
+++ b/src/main/webapp/app/entities/sector/list/sector.component.html
@@ -1,21 +1,22 @@
 <div>
   <h2 id="page-heading" data-cy="SectorHeading">
-    <span>Sectors</span>
-
-    <div class="d-flex justify-content-end">
-      <button class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
+    <span>الاسلاك</span>
+     <br>
+     <br>
+    <div class="d-flex justify-content-start">
+      <button style="border-radius: 5rem;" style="border-radius: 5rem;" class="btn btn-info me-2" (click)="load()" [disabled]="isLoading">
         <fa-icon icon="sync" [spin]="isLoading"></fa-icon>
-        <span>Refresh list</span>
+        <span>تحديث القائمة</span>
       </button>
 
-      <button
+      <button style="border-radius: 5rem;" style="border-radius: 5rem;"
         id="jh-create-entity"
         data-cy="entityCreateButton"
-        class="btn btn-primary jh-create-entity create-sector"
+        class="btn btn-success jh-create-entity create-sector"
         [routerLink]="['/sector/new']"
       >
         <fa-icon icon="plus"></fa-icon>
-        <span> Create a new Sector </span>
+        <span> اظافة سلك جديد </span>
       </button>
     </div>
   </h2>
@@ -25,7 +26,7 @@
   <jhi-alert></jhi-alert>
 
   <div class="alert alert-warning" id="no-result" *ngIf="sectors?.length === 0">
-    <span>No Sectors found</span>
+    <span>لاتوجد بيانات</span>
   </div>
 
   <div class="table-responsive table-entities" id="entities" *ngIf="sectors && sectors.length > 0">
@@ -34,13 +35,13 @@
         <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" (sortChange)="navigateToWithComponentValues()">
           <th scope="col" jhiSortBy="id">
             <div class="d-flex">
-              <span>ID</span>
+              <span>رمز</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
           <th scope="col" jhiSortBy="designation">
             <div class="d-flex">
-              <span>Designation</span>
+              <span>تسمية السلك</span>
               <fa-icon class="p-1" icon="sort"></fa-icon>
             </div>
           </th>
@@ -50,22 +51,22 @@
       <tbody>
         <tr *ngFor="let sector of sectors; trackBy: trackId" data-cy="entityTable">
           <td>
-            <a [routerLink]="['/sector', sector.id, 'view']">{{ sector.id }}</a>
+            <a style="text-orientation: sideways-right;" [routerLink]="['/sector', sector.id, 'view']">{{ sector.id }}</a>
           </td>
           <td>{{ sector.designation }}</td>
           <td class="text-end">
             <div class="btn-group">
-              <button type="submit" [routerLink]="['/sector', sector.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
+              <button style="border-radius: 5rem;" type="submit" [routerLink]="['/sector', sector.id, 'view']" class="btn btn-info btn-sm" data-cy="entityDetailsButton">
                 <fa-icon icon="eye"></fa-icon>
                 <span class="d-none d-md-inline">عرض</span>
               </button>
 
-              <button type="submit" [routerLink]="['/sector', sector.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
+              <button style="border-radius: 5rem;" type="submit" [routerLink]="['/sector', sector.id, 'edit']" class="btn btn-primary btn-sm" data-cy="entityEditButton">
                 <fa-icon icon="pencil-alt"></fa-icon>
                 <span class="d-none d-md-inline">تعديل</span>
               </button>
 
-              <button type="submit" (click)="delete(sector)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
+              <button style="border-radius: 5rem;"type="submit" (click)="delete(sector)" class="btn btn-danger btn-sm" data-cy="entityDeleteButton">
                 <fa-icon icon="times"></fa-icon>
                 <span class="d-none d-md-inline">حذف</span>
               </button>
