--- a/src/main/webapp/app/entities/certificate/detail/certificate-detail.component.html
+++ b/src/main/webapp/app/entities/certificate/detail/certificate-detail.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <div *ngIf="certificate">
-      <h2 data-cy="certificateDetailsHeading"><span>Certificate</span></h2>
+      <h2 data-cy="certificateDetailsHeading"><span>شهادة</span></h2>
 
       <hr />
 
@@ -10,21 +10,21 @@
       <jhi-alert></jhi-alert>
 
       <dl class="row-md jh-entity-details">
-        <dt><span>ID</span></dt>
+        <dt><span>رمز</span></dt>
         <dd>
           <span>{{ certificate.id }}</span>
         </dd>
-        <dt><span>Designation</span></dt>
+        <dt><span>تسمية</span></dt>
         <dd>
           <span>{{ certificate.designation }}</span>
         </dd>
       </dl>
 
-      <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
+      <button style="border-radius: 5rem;" type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>رجوع</span>
       </button>
 
-      <button type="button" [routerLink]="['/certificate', certificate.id, 'edit']" class="btn btn-primary">
+      <button style="border-radius: 5rem;" type="button" [routerLink]="['/certificate', certificate.id, 'edit']" class="btn btn-primary">
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>تعديل</span>
       </button>
     </div>
