--- a/src/main/webapp/app/entities/grade/detail/grade-detail.component.html
+++ b/src/main/webapp/app/entities/grade/detail/grade-detail.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <div *ngIf="grade">
-      <h2 data-cy="gradeDetailsHeading"><span>Grade</span></h2>
+      <h2 data-cy="gradeDetailsHeading"><span>الرتبة</span></h2>
 
       <hr />
 
@@ -10,7 +10,7 @@
       <jhi-alert></jhi-alert>
 
       <dl class="row-md jh-entity-details">
-        <dt><span>ID</span></dt>
+        <dt><span>رمز</span></dt>
         <dd>
           <span>{{ grade.id }}</span>
         </dd>
@@ -18,13 +18,13 @@
         <dd>
           <span>{{ grade.designation }}</span>
         </dd>
-        <dt><span>Ideducationlevel</span></dt>
+        <dt><span>المستوى التعليمي</span></dt>
         <dd>
           <div *ngIf="grade.ideducationlevel">
             <a [routerLink]="['/educationlevel', grade.ideducationlevel.id, 'view']">{{ grade.ideducationlevel.id }}</a>
           </div>
         </dd>
-        <dt><span>Idcertificate</span></dt>
+        <dt><span>الشهادة</span></dt>
         <dd>
           <div *ngIf="grade.idcertificate">
             <a [routerLink]="['/certificate', grade.idcertificate.id, 'view']">{{ grade.idcertificate.id }}</a>
@@ -32,11 +32,11 @@
         </dd>
       </dl>
 
-      <button type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
+      <button style="border-radius: 5rem;" type="submit" (click)="previousState()" class="btn btn-info" data-cy="entityDetailsBackButton">
         <fa-icon icon="arrow-left"></fa-icon>&nbsp;<span>رجوع</span>
       </button>
 
-      <button type="button" [routerLink]="['/grade', grade.id, 'edit']" class="btn btn-primary">
+      <button style="border-radius: 5rem;" type="button" [routerLink]="['/grade', grade.id, 'edit']" class="btn btn-primary">
         <fa-icon icon="pencil-alt"></fa-icon>&nbsp;<span>تعديل</span>
       </button>
     </div>
