--- a/src/main/webapp/app/entities/grade/update/grade-update.component.html
+++ b/src/main/webapp/app/entities/grade/update/grade-update.component.html
@@ -1,18 +1,18 @@
 <div class="d-flex justify-content-center">
   <div class="col-8">
     <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-      <h2 id="jhi-grade-heading" data-cy="GradeCreateUpdateHeading">Create or edit a Grade</h2>
+      <h2 id="jhi-grade-heading" data-cy="GradeCreateUpdateHeading">اظافة أو تعديل الرتبة</h2>
 
       <div>
         <jhi-alert-error></jhi-alert-error>
 
         <div class="row mb-3" *ngIf="editForm.controls.id.value !== null">
-          <label class="form-label" for="field_id">ID</label>
+          <label class="form-label" for="field_id">رمز</label>
           <input type="text" class="form-control" name="id" id="field_id" data-cy="id" formControlName="id" [readonly]="true" />
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_designation">Designation</label>
+          <label class="form-label" for="field_designation"> تسمية</label>
           <input
             type="text"
             class="form-control"
@@ -27,7 +27,7 @@
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_ideducationlevel">Ideducationlevel</label>
+          <label class="form-label" for="field_ideducationlevel">المستوى التعليمي</label>
           <select
             class="form-control"
             id="field_ideducationlevel"
@@ -38,13 +38,14 @@
           >
             <option [ngValue]="null"></option>
             <option [ngValue]="educationlevelOption" *ngFor="let educationlevelOption of educationlevelsSharedCollection">
-              {{ educationlevelOption.id }}
+              {{ educationlevelOption.designation }}
             </option>
           </select>
         </div>
 
         <div class="row mb-3">
-          <label class="form-label" for="field_idcertificate">Idcertificate</label>
+          <label class="form-label" for="field_idcertificate">
+            الشهادة</label>
           <select
             class="form-control"
             id="field_idcertificate"
@@ -55,18 +56,18 @@
           >
             <option [ngValue]="null"></option>
             <option [ngValue]="certificateOption" *ngFor="let certificateOption of certificatesSharedCollection">
-              {{ certificateOption.id }}
+              {{ certificateOption.designation }}
             </option>
           </select>
         </div>
       </div>
 
       <div>
-        <button type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
+        <button style="border-radius: 5rem;" type="button" id="cancel-save" data-cy="entityCreateCancelButton" class="btn btn-secondary" (click)="previousState()">
           <fa-icon icon="ban"></fa-icon>&nbsp;<span>الغاء</span>
         </button>
 
-        <button
+        <button style="border-radius: 5rem;"
           type="submit"
           id="save-entity"
           data-cy="entityCreateSaveButton"
