change for entities grade,speciality,sector,educationlevel and certificate

--- a/src/main/webapp/app/entities/educationlevel/delete/educationlevel-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/educationlevel/delete/educationlevel-delete-dialog.component.html
@@ -7,7 +7,7 @@
 
   <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
-    <p id="jhi-delete-educationlevel-heading">هل أنت متأكد أنك تريد حذف مستوى التعليم {{ educationlevel.id }}؟</p>
+    <p id="jhi-delete-educationlevel-heading">هل أنت متأكد أنك تريد حذف مستوى التعليم {{ educationlevel.designation }}؟</p>
   </div>
 
   <div class="modal-footer">
