--- a/src/main/webapp/app/entities/grade/list/grade.component.html
+++ b/src/main/webapp/app/entities/grade/list/grade.component.html
@@ -1,6 +1,6 @@
 <div>
   <h2 id="page-heading" data-cy="GradeHeading">
-    <span>الرتبات</span>
+    <span>الرتب</span>
     <br>
     <br>
     <div  class="d-flex justify-content-start">
