--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -51,7 +51,7 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
+               
                 <span>Fields</span>
               </a>
             </li>
@@ -63,8 +63,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Educationlevel</span>
+               
+                <span>المستوى التعليمي</span>
               </a>
             </li>
             <li>
@@ -75,8 +75,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Certificate</span>
+               
+                <span>الشهادة</span>
               </a>
             </li>
             <li>
@@ -87,8 +87,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Grade</span>
+               
+                <span>الرتبة</span>
               </a>
             </li>
             <li>
@@ -99,8 +99,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Sector</span>
+                
+                <span>السلك</span>
               </a>
             </li>
             <li>
@@ -111,8 +111,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Speciality</span>
+                
+                <span>الاختصاص</span>
               </a>
             </li>
             <li>
@@ -124,7 +124,7 @@
                 (click)="collapseNavbar()"
               >
                 <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Generalrules</span>
+                <span>الشروط العامة</span>
               </a>
             </li>
             <li>
@@ -135,8 +135,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Contestannounce</span>
+               
+                <span>إعلان إنتداب</span>
               </a>
             </li>
             <li>
@@ -147,8 +147,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Contest</span>
+               
+                <span>المناظرة</span>
               </a>
             </li>
             <li>
@@ -159,8 +159,8 @@
                 [routerLinkActiveOptions]="{ exact: true }"
                 (click)="collapseNavbar()"
               >
-                <fa-icon icon="asterisk" [fixedWidth]="true"></fa-icon>
-                <span>Contestfield</span>
+                
+                <span></span>
               </a>
             </li>
             <li>
