--- a/src/main/webapp/app/entities/speciality/delete/speciality-delete-dialog.component.html
+++ b/src/main/webapp/app/entities/speciality/delete/speciality-delete-dialog.component.html
@@ -8,7 +8,7 @@
   <div class="modal-body">
     <jhi-alert-error></jhi-alert-error>
     <p id="jhi-delete-speciality-heading">
-      هل أنت متأكد أنك تريد حذف التخصص       {{ speciality.id }}؟</p>
+      هل أنت متأكد أنك تريد حذف التخصص       {{ speciality.designation }}؟</p>
   </div>
 
   <div class="modal-footer">
